# prjkt

./: Makefile  README.md  Taskfile.yml  app.py  config.py  db.py  misc.py  prjkt  projekti  projekti-app.py  pyproject.toml  requirements.txt  setup.py  tasks.py  utils.py
scripts/: projekti-app.py  setup.py
