[tool.poetry]
name = "prjkt"
version = "0.1.0"
description = "Terminal based project manager written in python"
authors = ["greyhoundforty <ryantiffany@fastmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
